# AGC_core_perception

lidar_euclidean_cluster_detect/config/: params.yaml
lidar_euclidean_cluster_detect/launch/: euclidean_clustering_Exp.launch  lidar_euclidean_cluster_detect.launch
lidar_kf_contour_track/include/: lidar_kf_contour_track_core.h
lidar_kf_contour_track/launch/: lidar_kf_contour_track.launch
lidar_kf_contour_track/nodes/lidar_kf_contour_track/: lidar_kf_contour_track_core.cpp
lidar_localizer/launch/: ndt_matching.launch  ndt_matching_tku.launch
op_gnss_localizer/: CMakeLists.txt  interface.yaml  package.xml
op_gnss_localizer/launch/: op_fix2tfpose.launch
op_gnss_localizer/nodes/op_fix2tfpose/: fix2tfpose.cpp
op_tlr/: CMakeLists.txt  package.xml
op_tlr/darknet/: bad.list
op_tlr/darknet/cfg/: bosch.data
op_tlr/darknet/src/: activation_layer.c  activations.h  art.c  avgpool_layer.c  batchnorm_layer.c  blas.c  blas.h  box.c  captcha.c  cifar.c  classifier.c  coco.c  col2im.c  compare.c  connected_layer.c  conv_lstm_layer.c  convolutional_layer.c  convolutional_layer.h  cost_layer.c  crnn_layer.c  crop_layer.c  dark_cuda.c  darknet.c  data.c  data.h  deconvolutional_layer.c  deconvolutional_layer.h  demo.c  detection_layer.c  detector.c  dice.c  dropout_layer.c  gaussian_yolo_layer.c  gemm.c  gemm.h  gettimeofday.h  go.c  gru_layer.c  im2col.c  im2col.h  (+41 more)
op_tlr/include/: DarknetDetector.h  op_tlr_core.h
op_tlr/launch/: op_tlr.launch
op_tlr/nodes/: DarknetDetector.cpp  op_tlr.cpp  op_tlr_core.cpp
