<?xml version="1.0"?>
<package format="2">
  <name>op_tlr</name>
  <version>1.13.0</version>
  <description>OpenPlanner-Yolov4-Traffic-Light-Recognizer</description>
  <maintainer email="hatem.darweesh@gmail.com">Hatem Darweesh</maintainer>
  <author email="hatem.darweesh@gmail.com">Hatem Darweesh</author>
  <license>Apache 2</license>
  
  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>cv_bridge</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>image_transport</depend> 
  <depend>op_planner</depend>
  <depend>op_ros_helpers</depend>
     
</package>
